--- a/brand-page/src/App.css
+++ b/brand-page/src/App.css
@@ -11,13 +11,14 @@
 body {
   font-family: "Poppins", sans-serif;
 }
-
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1280px;
-  margin: 0 auto;
   height: 72px;
 }
 nav ul {
@@ -33,4 +34,10 @@ button {
   height: 32px;
   color: white;
   font-weight: 500;
+}
+
+.hero {
+  display: flex;
+  align-items: center;
+  height: calc(100vh -72px);
 }
